# monty-extended

./: .gitignore  CLAUDE.md  Cargo.toml  EXTENSIONS_ARCHITECTURE.md  Makefile  README.md  RELEASING.md  SUMMARY.md  WIP.md  pyproject.toml
.claude/plans/: implementation-plan.md  pyo3-ergonomic-api-plan.md
.github/workflows/: ci.yml  codspeed.yml
crates/fuzz/fuzz_targets/: string_input_panic.rs  tokens_input_panic.rs
crates/monty/: Cargo.toml  README.md
crates/monty-bench/benches/: main.rs  pool.rs
crates/monty-cli/: Cargo.toml  README.md  pyproject.toml
crates/monty-cli/src/: main.rs  subprocess.rs
crates/monty-cli/tests/: mounts.rs  subprocess.rs
crates/monty-cpython/: README.md
crates/monty-cpython/src/: events.rs  pyexec.rs  runner.py  session.rs  traceback.rs
crates/monty-cpython/tests/: stdio_session.rs
crates/monty-datatest/: Cargo.toml
crates/monty-datatest/src/: main.rs
crates/monty-extension-api/: Cargo.toml
crates/monty-extension-api/src/: lib.rs
crates/monty-extension-api/tests/: ergonomic_naming_smoke.rs  module_level_smoke.rs  proc_macro_smoke.rs
crates/monty-extension-macros/: Cargo.toml
crates/monty-extension-macros/src/: lib.rs
crates/monty-fs/: Cargo.toml  README.md
crates/monty-fs/src/: common.rs  direct.rs  dispatch.rs  error.rs  lib.rs  mount_mode.rs  mount_table.rs  overlay.rs  overlay_state.rs
crates/monty-fs/tests/: fs.rs  fs_security.rs
crates/monty-js/: .gitignore  README.md  build.rs  native-addon.d.ts  package-lock.json  package.json  playwright.config.ts
crates/monty-js/__test__/: exceptions.spec.ts  feed_start.spec.ts  helpers.ts  mount.spec.ts  pool.spec.ts  start.spec.ts  types.spec.ts
crates/monty-js/browser-test/: browser.spec.ts  index.html  main.ts  vite.config.ts
crates/monty-js/scripts/: assemble-packages.mjs  clean-loader.mjs
crates/monty-js/smoke-test/: package-smoke.mjs
crates/monty-js/src/: convert.rs  lib.rs  monty_cls.rs  pool.rs
crates/monty-js/ts/: errors.ts  index.ts  mount.ts  options.ts  pool.ts  session.ts
crates/monty-macros/: Cargo.toml  README.md
crates/monty-macros/src/: from_args.rs  lib.rs  to_args.rs
crates/monty-pool/: Cargo.toml  README.md
crates/monty-pool/src/: checkout.rs
crates/monty-pool/tests/: pool_test.rs  websocket.rs
crates/monty-proto/: README.md
crates/monty-python/: Cargo.toml  README.md  pyproject.toml
crates/monty-python/python/pydantic_monty/: __init__.py  _binary.py  _monty.pyi  decorators.py  enforcement.py  handles.py  os_access.py
crates/monty-python/src/: async_dispatch.rs  build.rs  convert.rs  exceptions.rs  lib.rs  monty_cls.rs  mount.rs  pool.rs  repl.rs  snapshot.rs
crates/monty-python/tests/: test_async.py  test_exceptions.py  test_extensions.py  test_feed_start.py  test_mount_table.py  test_os_access_raw.py  test_os_calls.py  test_serialize.py
crates/monty-runtime/: README.md
crates/monty-type-checking/: README.md
crates/monty-typeshed/: README.md  update.py
crates/monty/src/: codecs.rs  exception_private.rs  exception_public.rs  expressions.rs  extensions.rs  function.rs  hash.rs  heap.rs  heap_data.rs  intern.rs  lib.rs  object.rs  object_json.rs  os.rs  parse.rs  prepare.rs  repl.rs  resource.rs  run.rs  run_progress.rs  sorting.rs  string_builder.rs  value.rs
crates/monty/src/args/: bind_native.rs  bind_python.rs  from_value.rs  mod.rs  to_monty_object.rs
crates/monty/src/builtins/: enumerate.rs  map.rs  min_max.rs  next.rs  open.rs  pow.rs  print.rs  reversed.rs  round.rs  sorted.rs  sum.rs  test_cm.rs  zip.rs
crates/monty/src/bytecode/: builder.rs  code.rs  compiler.rs  op.rs
crates/monty/src/bytecode/vm/: call.rs  collections.rs  compare.rs  exceptions.rs  mod.rs
crates/monty/src/fs/: common.rs  direct.rs  dispatch.rs  error.rs  mount_mode.rs  mount_table.rs  overlay_state.rs  path_security.rs
crates/monty/src/modules/: CLAUDE.md  asyncio.rs  math.rs  mod.rs  os.rs  re.rs  unicodedata.rs
crates/monty/src/modules/json/: dump.rs  load.rs
crates/monty/src/types/: bytes.rs  date.rs  datetime.rs  dict.rs  file.rs  iter.rs  list.rs  mod.rs  path.rs  property.rs  py_trait.rs  re_match.rs  re_pattern.rs  str.rs  timedelta.rs  timezone.rs  type.rs
crates/monty/test_cases/: args__macro_errors.py  assign__chain.py  async__basic.py  async__closure.py  async__ext_call.py  async__ext_exc.py  async__gather_all.py  async__nested_await.py  async__return_types.py  async__sequential.py  async__transitive_closure.py  async__with_args.py  bench__kitchen_sink.py  bool__ops.py  builtin__filter.py  builtin__getattr.py  builtin__hasattr.py  builtin__iter_funcs.py  builtin__iter_next.py  builtin__map.py  builtin__math_funcs.py  builtin__more_iter_funcs.py  builtin__print_kwargs.py  builtin__repr.py  builtin__setattr.py  builtin__string_funcs.py  bytes__decode_invalid_utf8.py  bytes__methods.py  bytes__ops.py  chain_comparison__all.py  class__attrs.py  class__basic.py  class__body_external.py  class__closures.py  class__dynamic_type.py  class__init_async.py  class__init_external.py  class__repr.py  class__scope.py  class__type_errors.py  (+153 more)
crates/monty/tests/: assert_messages.rs  async_memory_limits.rs  asyncio.rs  binary_serde.rs  bytecode_limits.rs  datetime_format.rs  encoding.rs  error_locations.rs  external_function_identity.rs  file_error_paths.rs  file_resource_tracking.rs  fs.rs  fs_security.rs  heap_reader_compile_fail.rs  inputs.rs  json_error_data.rs  json_serde.rs  main.rs  math_module.rs  module_dunders.rs  name_lookup.rs  os_tests.rs  parse_errors.rs  parse_large_literals.rs  print_writer.rs  regex.rs  repl.rs  resource_limits.rs  security.rs  try_from.rs
crates/monty/tests/heap_reader_compile_fail_cases/: cases.rs  smuggle_vm.stderr
examples/host_extension/: README.md  main.py  ml_extension.py  test_e2e.py
examples/native_extension/: Cargo.toml  README.md  test_e2e.py
limitations/: assert.md  asyncio.md  builtins.md  datetime.md  encoding.md  exceptions.md  filesystem.md  json.md  pathlib.md  pool-architecture.md  re.md  resource_limits.md  unicodedata.md
scripts/: run_traceback.py
(+21 files in other folders)
