[workspace]
resolver = "2"
members = [
    "crates/monty",
    "crates/monty-fs",
    "crates/monty-runtime",
    "crates/monty-proto",
    "crates/monty-pool",
    "crates/monty-wasm-runtime",
    "crates/monty-python",
    "crates/monty-js",
    "crates/monty-datatest",
    "crates/monty-bench",
    "crates/monty-type-checking",
    "crates/monty-typeshed",
    "crates/monty-macros",
    "crates/fuzz"
]
default-members = ["crates/monty-runtime"]

[workspace.package]
edition = "2024"
version = "0.0.19-beta.4"
rust-version = "1.95"
license = "MIT"
authors = ["Samuel Colvin <samuel@pydantic.dev>"]
description = "A sandboxed, snapshotable Python interpreter written in Rust."
categories = ["compilers", "emulators", "development-tools"]
keywords = ["python", "interpreter", "sandbox", "embedded"]
homepage = "https://github.com/pydantic/monty/"
repository = "https://github.com/pydantic/monty/"
documentation = "https://github.com/pydantic/monty/"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false

[workspace.dependencies]
# Internal crates. The `path` is used for local/workspace builds; the `version`
# is required so the crates can be published to crates.io (`cargo publish`
# rejects path-only dependencies). These versions MUST be kept in lockstep with
# `workspace.package.version` above and bumped together on each release — see
# RELEASING.md.
monty = { path = "crates/monty", version = "0.0.19-beta.4" }
monty-fs = { path = "crates/monty-fs", version = "0.0.19-beta.4" }
monty-macros = { path = "crates/monty-macros", version = "0.0.19-beta.4" }
monty-proto = { path = "crates/monty-proto", version = "0.0.19-beta.4" }
monty-pool = { path = "crates/monty-pool", version = "0.0.19-beta.4" }
monty-type-checking = { path = "crates/monty-type-checking", version = "0.0.19-beta.4" }
monty-typeshed = { path = "crates/monty-typeshed", version = "0.0.19-beta.4" }
# ruff, ty and related crates
ruff_python_parser = "0.0.3"
ruff_python_stdlib = "0.0.3"
ruff_python_ast = "0.0.3"
ruff_text_size = "0.0.3"
ruff_db = { version="0.0.3" ,features = ["serde"] }
# ty_python_semantic, ty_python_core and ty_vendored are only published at 0.0.2,
# but those 0.0.2 crates depend on the 0.0.3 line of the ruff crates and on
# ty_module_resolver 0.0.3, so the lower-level pins must be 0.0.3 to avoid two
# incompatible copies of each crate ending up in the dependency tree.
ty_python_semantic = "0.0.2"
ty_python_core = "0.0.2"
ty_module_resolver = "0.0.3"
ty_vendored = "0.0.2"
# salsa version matches the version ruff uses
salsa = { version="0.27.0", default-features = false, features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
] }
# Unicode general-category lookup, for CPython-compatible `str.isprintable`
# (which drives `repr` escaping of non-printable code points). Pure generated
# data, no unsafe; its Unicode version may lag CPython's, affecting only
# recently (re)assigned code points.
unicode-general-category = "1"
# `unicodedata` module backing data. Both are pure generated tables, no unsafe;
# `unicode_names2` backs `name()`/`lookup()`, `unicode-normalization` backs
# `normalize()`/`is_normalized()`/`combining()`. Their Unicode versions may lag
# or lead CPython's, affecting only recently (re)assigned code points.
unicode_names2 = "1"
unicode-normalization = "0.1"
# bigint and related crates
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
# PyO3: one workspace pin so `pyo3` and `pyo3-build-config` (whose versions
# must match) are always bumped together. The `pyo3` entry stays feature-free —
# workspace-dep features are additive, and each crate needs a different set
# (`auto-initialize` embeds CPython, `generate-import-lib`/`num-bigint`/... for
# the extension module and conversion layers).
pyo3 = "0.28"
pyo3-build-config = { version = "0.28", features = ["resolve-config"] }
# others
itoa = "1"
ahash = { version = "0.8.0", features = ["serde"] }
indexmap = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }
# exact pin: prost-build output must be byte-stable across contributors and CI
# so `make check-proto` (regenerate + git diff) is reproducible
prost = "=0.14.4"
sha2 = "0.10"
pretty_assertions = "1.4"
insta = "1.47"
clap = { version = "4", features = ["derive"] }
# Blocking WebSocket client with rustls for `wss://`, used by the pool's
# remote transport (monty-pool).
tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
# Unique, exclusively-created temp dirs (pool tests).
tempfile = "3"
# Pulled in only to install a process-level rustls `CryptoProvider` before the
# first `wss://` dial: rustls 0.23 panics on first TLS use when it can't pick a
# provider automatically (both `aws-lc-rs` and `ring`, or neither, in the dep
# tree), so naming `aws_lc_rs` explicitly removes the ambiguity.
rustls = { version = "0.23", features = ["aws_lc_rs"] }

[workspace.lints.rust]
# codspeed cfg is set by codspeed-criterion-compat when running in CodSpeed environment
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(codspeed)', 'cfg(heap_reader_compile_fail_tests)', 'cfg(heap_reader_compile_fail_test_read_while_ref_alive)', 'cfg(heap_reader_compile_fail_test_dec_ref_while_reading)', 'cfg(heap_reader_compile_fail_test_smuggle_heap_read)', 'cfg(heap_reader_compile_fail_test_double_get_mut)', 'cfg(heap_reader_compile_fail_test_heap_mutation_while_reading)', 'cfg(heap_reader_compile_fail_test_mutation_in_map_closure)', 'cfg(heap_reader_compile_fail_test_smuggle_vm)', 'cfg(heap_reader_compile_fail_test_smuggle_and_swap_reader)'] }

[workspace.lints.rustdoc]
invalid_codeblock_attributes = "allow"

[workspace.lints.clippy]
dbg_macro = "warn"
use_self = "warn"
allow_attributes = "warn"
undocumented_unsafe_blocks = "warn"
redundant_clone = "warn"
absolute_paths = "warn"

# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
