[package]
name = "monty-extension-api"
readme = "../../README.md"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Stable public API for writing native Monty extensions."
keywords = ["python", "interpreter", "sandbox", "extensions"]
categories = ["compilers", "development-tools"]
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "monty_extension_api"
path = "src/lib.rs"

[dependencies]
abi_stable = "0.11"
monty-extension-macros = { path = "../monty-extension-macros" }

# Custom lints instead of workspace = true because abi_stable macros generate code
# with absolute paths and non-local impl blocks that we can't control.
[lints.rust]
non_local_definitions = "allow"

[lints.rustdoc]
invalid_codeblock_attributes = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
# abi_stable macros generate absolute paths
absolute_paths = "allow"
# abi_stable macros generate casts and explicit lifetimes
cast_ptr_alignment = "allow"
used_underscore_binding = "allow"
needless_lifetimes = "allow"
elidable_lifetime_names = "allow"
