[package]
name = "monty-extension-macros"
readme = "../../README.md"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Proc macros for ergonomic native Monty extensions."
keywords = ["python", "interpreter", "sandbox", "extensions"]
categories = ["compilers", "development-tools"]
homepage = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lints]
workspace = true
