[package]
name = "monty-fs"
readme = "README.md"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "monty_fs"

[dependencies]
monty = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
