[package]
name = "pydantic-monty"
description = "Python bindings for the Monty sandboxed Python interpreter"
readme = "README.md"
# Distributed as a PyO3 extension wheel on PyPI, not as a crate on crates.io.
publish = false
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "_monty"
# The `_monty` Python extension module (the actual deliverable).
crate-type = ["cdylib"]

[dependencies]
ahash = { workspace = true }
monty-pool = { workspace = true }
monty-proto = { workspace = true, features = ["python"] }
monty = { workspace = true }
monty-fs = { workspace = true }
pyo3 = { workspace = true, features = ["indexmap", "generate-import-lib", "num-bigint"] }
num-bigint = { workspace = true }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt", "sync"] }

[build-dependencies]
pyo3-build-config = { workspace = true }

[features]
# make extensions visible to cargo vendor
extension-module = ["pyo3/generate-import-lib"]
# Forwards `monty`'s `test-hooks` feature for test harness builds.
test-hooks = ["monty/test-hooks"]

[lints]
workspace = true
